--- a/theme.template
+++ b/theme.template
@@ -1,3 +1,4 @@
+<link href="https://raw.githack.com/prakis/stringify.me-theme-card2/master/main.css" rel="stylesheet">
 <aside class="profile-card">
   <header>
     <!-- here’s the avatar -->
