--- a/theme.template
+++ b/theme.template
@@ -1,3 +1,5 @@
+<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css" rel="stylesheet">
+<link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Roboto'>
 <link href="https://raw.githack.com/prakis/stringify.me-theme-card2/master/main.css" rel="stylesheet">
 <aside class="profile-card">
   <header>
