CDN path issue fix

--- a/theme.template
+++ b/theme.template
@@ -1,6 +1,6 @@
 <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css" rel="stylesheet">
 <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Roboto'>
-<link href="https://raw.githack.com/repo/prakis/stringify.me-theme-card2/master/main.css" rel="stylesheet">
+<link href="https://raw.githack.com/prakis/stringify.me-theme-card1/master/main.css" rel="stylesheet">
 <aside class="profile-card">
   <header>
     <!-- here’s the avatar -->
